# ani3d

./: .gitignore  README.md  rapport.md
project/: CMakeLists.txt  main.cpp
project/shaders/mesh/: mesh.frag.glsl  mesh.vert.glsl
project/shaders/single_color/: single_color.frag.glsl
project/src/: application.cpp  application.hpp  environment.cpp  environment.hpp  fire_scene.cpp  fire_scene.hpp
